Revert "feat: #354 새로운 메시지 생성 시 알림 기능 추가 (#367)"
This reverts commit 690414f3b6b971f97baf22a52135d05e44030a78.